<resources>
    <string name="app_name" translatable="false">Smart City</string>
    <string name="actualites">News</string>
    <string name="commerces">Shops</string>
    <string name="chat">Chat</string>
    <string name="météo">meteo</string>
    <string name="news" translatable="false">news</string>
    <string name="alarmes">alarms</string>
    <string name="agenda" translatable="false">agenda</string>
    <string name="liste_commerces">shops list</string>
    <string name="offres">promotions</string>
    <string name="mes_groupes">my groups</string>
    <string name="rechercher">search</string>
    <string name="filtrer">filter</string>
    <string name="suivi">followed</string>
    <string name="se_desabonner">Unfollow</string>
    <string name="oui">Yes</string>
    <string name="non">No</string>
    <string name="quitter">Leave</string>
    <string name="rejoint">joined</string>
    <string name="quitté">left</string>
    <string name="rejoindre">Join</string>
    <string name="inscription">"sign up "</string>
    <string name="connexion">sign in</string>
    <string name="nom">Last Name</string>
    <string name="prenom">First Name</string>
    <string name="email">Mail address</string>
    <string name="mot_de_passe">Password</string>
    <string name="confirmer_mot_de_passe">Confirm password</string>
    <string name="valider">validate</string>
    <string name="nom_requis">Please entrer a Last Name.</string>
    <string name="prenom_requis">Please enter a First Name.</string>
    <string name="email_requis">Please enter a mail address.</string>
    <string name="mot_de_passe_requis">Please enter a password.</string>
    <string name="mot_de_passe_trop_court">Password must be at least 8 characters.</string>
    <string name="mot_de_passe_pas_identiques">Please entrer the same password.</string>
    <string name="compte_existant">An account with this mail address already exists.</string>
    <string name="connexion_echec">Incorrect mail address or password.</string>
    <string name="centres_interet">hobbies</string>
    <string name="choix_centres_interet_message">Select your hobbies for a personalized experience.</string>
    <string name="choix_centres_interet_erreur">Please select at least 1 hobbie.</string>
    <string name="messages">messages</string>
    <string name="message_placeholder">Send a message...</string>
    <string name="nom_groupe">Group name</string>
    <string name="description">Description</string>
    <string name="centre_interet">Hobbie</string>
    <string name="nouveau_groupe">new group</string>
    <string name="deconnexion">sign out</string>
    <string name="parametres">settings</string>
    <string name="plus_suivi">unfollowed</string>
    <string name="message_nom_groupe_trop_court">Name must be at least 3 characters.</string>
    <string name="message_nom_groupe_trop_long">Name must be maximum 15 charcaters</string>
    <string name="message_description_trop_long">Description must be maximum 20 characters.</string>
    <string name="message_select_interet">Please select a hobbie.</string>
    <string name="meteo_description_200">Thunderstorm with light rain</string>
    <string name="meteo_description_201">Thunderstorm with rain</string>
    <string name="meteo_description_202">Thunderstorm with heavy rain</string>
    <string name="meteo_description_230">Thunderstorm with light drizzle</string>
    <string name="meteo_description_231">Thunderstorm with drizzle</string>
    <string name="meteo_description_232">Thunderstorm with heavy drizzle</string>
    <string name="meteo_description_233">Thunderstorm with Hail</string>
    <string name="meteo_description_300">Light Drizzle</string>
    <string name="meteo_description_301">Drizzle</string>
    <string name="meteo_description_302">Heavy Drizzle</string>
    <string name="meteo_description_500">Light Rain</string>
    <string name="meteo_description_501">Moderate Rain</string>
    <string name="meteo_description_502">Heavy Rain</string>
    <string name="meteo_description_511">Freezing rain</string>
    <string name="meteo_description_520">Light shower rain</string>
    <string name="meteo_description_521">Shower rain</string>
    <string name="meteo_description_522">Heavy shower rain</string>
    <string name="meteo_description_600">Light snow</string>
    <string name="meteo_description_601">Snow</string>
    <string name="meteo_description_602">Heavy Snow</string>
    <string name="meteo_description_610">Mix snow/rain</string>
    <string name="meteo_description_611">Sleet</string>
    <string name="meteo_description_612">Heavy sleet</string>
    <string name="meteo_description_621">Snow shower</string>
    <string name="meteo_description_622">Heavy snow shower</string>
    <string name="meteo_description_623">Flurries</string>
    <string name="meteo_description_700">Mist</string>
    <string name="meteo_description_711">Smoke</string>
    <string name="meteo_description_721">Haze</string>
    <string name="meteo_description_731">Sand/dust</string>
    <string name="meteo_description_741">Fog</string>
    <string name="meteo_description_751">Freezing Fog</string>
    <string name="meteo_description_800">Clear sky</string>
    <string name="meteo_description_801">Few clouds</string>
    <string name="meteo_description_802">Scattered clouds</string>
    <string name="meteo_description_803">Broken clouds</string>
    <string name="meteo_description_804">Overcast clouds</string>
    <string name="meteo_description_805">Unknown Precipitation</string>
    <string name="profil">profile</string>
    <string name="Chargement">Uploading...</string>
    <string name="message_description_trop_court">Description must be at least 5 characters.</string>
</resources>
