<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/background">
        
        <EditText
            android:layout_marginTop="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inscription_nom"
            android:hint="@string/nom"
            android:background="@drawable/rounded_8"
            android:padding="12dp"
            android:textSize="16dp"
            android:textColor="@color/grey"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inscription_prenom"
            android:hint="@string/prenom"
            android:background="@drawable/rounded_8"
            android:padding="12dp"
            android:textSize="16dp"
            android:textColor="@color/grey"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inscription_email"
            android:hint="@string/email"
            android:background="@drawable/rounded_8"
            android:padding="12dp"
            android:textSize="16dp"
            android:textColor="@color/grey"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inscription_password"
            android:hint="@string/mot_de_passe"
            android:background="@drawable/rounded_8"
            android:padding="12dp"
            android:textSize="16dp"
            android:inputType="textPassword"
            android:textColor="@color/grey"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inscription_confirm_password"
            android:hint="@string/confirmer_mot_de_passe"
            android:background="@drawable/rounded_8"
            android:padding="12dp"
            android:textSize="16dp"
            android:inputType="textPassword"
            android:textColor="@color/grey"
            android:layout_marginBottom="20dp"/>


        <Button
            android:layout_marginTop="16dp"
            android:textSize="16dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/inscription_valider"
            android:text="@string/valider"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/rounded_50"
            android:backgroundTint="@color/blue"/>

    </LinearLayout>