<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Tabs">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/centres_interet"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

    </com.google.android.material.appbar.AppBarLayout>

       <!-- <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="true"
            android:orientation="vertical"
            android:paddingBottom="30dp"
            android:layout_weight="1">

            <GridView
                android:id="@+id/liste_interets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:clipToPadding="true"
                android:numColumns="3"
                android:orientation="vertical"
                android:nestedScrollingEnabled="true"
                android:scrollbars="none"></GridView>



        </LinearLayout>

    <Button
        android:layout_weight="1"
        android:textSize="16dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        android:id="@+id/inscription_envoyer"
        android:text="@string/valider"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/rounded_50"
        android:backgroundTint="@color/blue"/>-->

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        >
        <!-- Header -->
        <TextView
            android:id="@+id/message_interets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/choix_centres_interet_message"
            android:textColor="@color/grey"
            android:textSize="18dp"
            android:padding="16dp"
            />
        <!-- Footer -->
        <Button
            android:id="@+id/bouton_interets"
            android:layout_weight="1"
            android:textSize="16dp"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:paddingHorizontal="30dp"
            android:text="@string/valider"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/rounded_50"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/blue"
            android:layout_marginVertical="8dp"/>

        <GridView
            android:id="@+id/liste_interets"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bouton_interets"
            android:layout_below="@id/message_interets"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:numColumns="3"
            />

    </RelativeLayout>

</LinearLayout>